plugins {
    id 'com.android.application'
}

android {
    namespace 'com.pangbai.dowork'
    compileSdk 32
    buildToolsVersion "33.0.0"
    ndkVersion "19.2.5345600"

    defaultConfig {
        applicationId "com.pangbai.dowork"
        minSdk 24
        
        targetSdk 25
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        ndk {//让gradle知道ndk的配置
            abiFilter "arm64-v8a"//so文件的平
        }
        externalNativeBuild {
            /*  cmake {
                  cppFlags ''
              }*/
            ndkBuild {
                abiFilters 'arm64-v8a'
            }
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
    externalNativeBuild {
       /* cmake {
            path file('src/main/cpp/CMakeLists.txt')
            version '3.22.1'
        }*/
        ndkBuild {
            path file('src/main/jni/Android.mk')
        }
    }
    buildFeatures {
        viewBinding true
    }
    dataBinding{
        enabled = true
    }

}
ext{
    USE_CMAKE=false
}


dependencies {
    implementation "dev.rikka.rikkax.insets:insets:1.3.0"
    implementation 'androidx.appcompat:appcompat:1.4.1'
    implementation 'com.google.android.material:material:1.5.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
    implementation 'androidx.preference:preference:1.2.0'
    implementation 'androidx.recyclerview:recyclerview:1.0.0-alpha1'
    implementation 'androidx.cardview:cardview:+'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
}